# bridge-app

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bridge_app.egg-info/: PKG-INFO  SOURCES.txt
config/: logging_config.py  t5_training.yaml  t5_training_advanced.yaml
deployment/: fly.toml
results/checkpoints/: t5-small_best.pth
scripts/: extract_and_generate.ps1  verify_training_data.py
src/bridge_app.egg-info/: SOURCES.txt  top_level.txt
src/data/: bridges.db  training_data.json
src/parser/: config_schema.py  extract_features.py  extracted_features.py  generate_training_set.py  helpers.py  inference.py  solver.py  t5_solver.py  train.py
src/parser/t5_base/: config.json
src/static/css/: style.css
src/static/js/: app.js
src/templates/: index.html
test/: README_TEST.md  test_database.py  test_local_app.py  test_model_interactive.py  test_params.py  test_queries.py
utils/: build_database.py
