[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-app"
version = "0.1.0"
description = "NY Bridge Database with AI Search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bo Yang", email = "byang0845@gmail.com"}
]

dependencies = [
    "flask",
    "pandas",
    "numpy",
    "transformers",
    "torch",
    "sentencepiece"
]

[tool.setuptools]
packages = ["config", "src", "src.parser"]